# SHAR

./: .gitignore  CLAUDE.md  SHAR_Research_Plan.docx  pyproject.toml
configs/: faculty_progress_visual_pack.yaml  p0b_mapping.yaml  p1a_framework.yaml  p1b_views.yaml  p1c_architecture_freeze.yaml  p2a_scaffold.yaml
core/: __init__.py  device.py  p2a_conventions.py  provenance.py  reproducibility.py  run_lifecycle.py
data/: __init__.py  contracts.py  degradations.py  faculty_visual_pack.py  grouping.py  inventory.py  manifest.py  train_validation.py  ucf_intervals.py  views.py
docs/: 00_README.md  AGENTS.md  ARCHITECTURE.md  COMPUTE_POLICY.md  DATA_SPEC.md  DECISIONS.md  EVIDENCE_REGISTER.md  FACULTY_PROGRESS_VISUAL_PACK.md  P0A_DATA_INTAKE_ADDENDUM.md  P0A_WORK_ITEM.md  P0B_WORK_ITEM.md  P0C_WORK_ITEM.md  P1A_WORK_ITEM.md  P1B_CODE_WORK_ITEM.md  P1C_CODE_WORK_ITEM.md  P2A_CODE_WORK_ITEM.md  PHASE_PLAN.md  PRD.md  PROJECT_CONTROL.md  PROJECT_STATUS.md  REQUIREMENTS.md  RISKS.md  TECH_STACK.md  TRAINING_LOG.md  VALIDATION_PLAN.md
eval/: __init__.py  image_quality.py  metrics.py
models/: __init__.py  classifiers.py  restoration.py
requirements/: p0c-direct.txt  p0c-lock.txt
scripts/: calibrate_mps.py  check_environment.py  check_fresh_environment.py  check_p2a_readiness.py  check_repository.py  inventory_data.py  materialize_p1b_train_validation.py  materialize_p1b_views.py  render_faculty_visual_pack.py  smoke_p1a.py  smoke_p1b_views.py  smoke_p1c_models.py  smoke_p2a_scaffold.py  verify_p0b_mapping.py  verify_p0c.py
tests/: test_faculty_visual_pack.py  (+13 more)
(+123 files in other folders)
