[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shar-research"
version = "0.1.0"
description = "Reproducible suspicious human activity recognition research foundation"
requires-python = "==3.12.*"
dependencies = [
  "numpy==2.5.1",
  "opencv-python-headless==4.13.0.92",
  "pillow==12.3.0",
  "psutil==7.2.2",
  "PyYAML==6.0.3",
  "scikit-image==0.26.0",
  "torch==2.13.0",
  "torchvision==0.28.0",
]

[tool.setuptools]
packages = ["core", "data", "eval", "models"]
